--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,11 @@
     <string name="list_progress">3. List include progress item</string>
     <string name="title_activity_list_progress">ListProgressActivity</string>
     <string name="loading">Loading...</string>
+    
+    <!-- Speech recognize -->
+    <string name="speech_recognize">4. Speech recognize</string>
+    <string name="title_activity_speech_recognize">SpeechRecognizeActivity</string>
+    <string name="start_speak">Start speak</string>
+    <string name="waiting_for_input">Waiting for input</string>
 
 </resources>
