--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,6 +32,14 @@
     <string name="title_activity_speech_recognize">SpeechRecognizeActivity</string>
     <string name="start_speak">Start speak</string>
     <string name="waiting_for_input">Waiting for input</string>
+    <string name="no_voice_search_title">Notice</string>
+    <string name="no_voice_search_msg">The speech recognize function need Google Voice Search to support, do you want to download now?</string>
+    <string name="no_voice_search_cancel">Cancel</string>
+    <string name="no_voice_search_download">Download</string>
+    <string name="no_market_title">No App Store</string>
+    <string name="no_market_msg">You cellphone isn\'t install any app store to handle the request. Do you want to download it through browser?</string>
+    <string name="no_market_cancel">Cancel</string>
+    <string name="no_market_download">Download through browser</string>
     
     <!-- Nfc reader -->
     <string name="nfc_reader">5. Nfc reader</string>
