A demo for insert item to header and footer

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,13 +55,19 @@
     <string name="tab2">Tab2</string>
     <string name="title_activity_first">FirstActivity</string>
     <string name="title_activity_second">SecondActivity</string>
-    
+
     <!-- TabActivity -->
     <string name="tab_activity">7. Tab Activity Test</string>
     <string name="title_activity_tab_activity_test">TabActivityTest</string>
-    
+
     <!-- Workspace -->
     <string name="workspace">8. Workspace</string>
     <string name="title_activity_ws">WSActivity</string>
+
+    <!-- List insert -->
+    <string name="list_insert">9. List insert</string>
+    <string name="title_activity_list_insert">ListInsertActivity</string>
+    <string name="insert_from_header">Insert from header</string>
+    <string name="insert_from_footer">Insert from footer</string>
 
 </resources>
