--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -82,5 +82,21 @@
     <string name="webview">12. WebView</string>
     <string name="title_activity_web_view">WebViewActivity</string>
     <string name="submit">Enter</string>
+    
+    <!-- Capture -->
+    <string name="capture">13. Capture</string>
+    <string name="title_activity_capture">CaptureActivity</string>
+    
+    <!-- Text for Capture -->
+    <string name="msg_default_format">Format</string>
+    <string name="msg_default_type">Type</string>
+    <string name="msg_default_time">Time</string>
+    <string name="msg_default_meta">Metadata</string>
+    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
+    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
+    <string name="button_ok">OK</string>
+    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
+    <string name="msg_not_valid_web_address">Not a valid web address!</string>
+    <!-- End -->
 
 </resources>
